make tests use ROM files, write a TODO for what's left before merging Gradle branch